fixed gradient on firefox

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -3,8 +3,8 @@
 @import 'font_smoothing';
 
 $black: #222;
-$dark-gradient: linear-gradient(left, rgb(240, 57, 57), rgb(23, 23, 213));
-$light-gradient: linear-gradient(left, rgb(240, 240, 252), rgb(255, 243, 244));
+$dark-gradient: linear-gradient(to left, rgb(240, 57, 57), rgb(23, 23, 213));
+$light-gradient: linear-gradient(to left, rgb(240, 240, 252), rgb(255, 243, 244));
 
 // ProximaNovaCond
 
